[gd_scene load_steps=26 format=3 uid="uid://fd2y372dkxo3"]

[ext_resource type="AudioStream" uid="uid://be5edgsa4hhgj" path="res://Audio/click_audio.mp3" id="1_gl3tg"]
[ext_resource type="Script" path="res://Scripts/parallax_background.gd" id="2_ncdae"]
[ext_resource type="Texture2D" uid="uid://dbm2hic80bl8c" path="res://Sprites/1.png" id="3_tgcv5"]
[ext_resource type="Texture2D" uid="uid://duu1anww13qly" path="res://Sprites/2.png" id="4_8qx0e"]
[ext_resource type="Texture2D" uid="uid://gprk4yvih3t7" path="res://Sprites/3.png" id="5_haok8"]
[ext_resource type="Texture2D" uid="uid://cbic2fwv8xdou" path="res://Sprites/4.png" id="6_l86dr"]
[ext_resource type="Texture2D" uid="uid://cnei4b8hidsj6" path="res://Sprites/Chill_Girlie_avatar.png" id="8_88eb2"]
[ext_resource type="FontFile" uid="uid://c4fqewe0svy0x" path="res://TrueType (.ttf)/PixeloidSans-Bold.ttf" id="9_t5gts"]
[ext_resource type="FontFile" uid="uid://c01xqphdobx04" path="res://TrueType (.ttf)/PixeloidSans.ttf" id="10_t58x3"]
[ext_resource type="Script" path="res://Scripts/menubar.gd" id="11_ktlp2"]
[ext_resource type="Theme" uid="uid://cygd27c88adfn" path="res://Themes/button.tres" id="11_lvpoh"]
[ext_resource type="Texture2D" uid="uid://rieu0ijq5s3o" path="res://Sprites/arrow.png" id="12_dctqq"]
[ext_resource type="Texture2D" uid="uid://cgjy1n1q4l6uk" path="res://Sprites/Button.png" id="12_nryuc"]
[ext_resource type="Texture2D" uid="uid://e03d5gycqxfs" path="res://Sprites/arrow_mir.png" id="13_gxk5j"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_65my8"]
texture = ExtResource("12_nryuc")
expand_margin_left = 20.0
expand_margin_top = 5.0
expand_margin_right = 20.0
expand_margin_bottom = 5.0

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_mocl5"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_0xj7t"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_nn6tc"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_0gv6d"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_dnqww"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_l1wbm"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_pj5ck"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_33b7a"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_y8576"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_g4una"]

[node name="Store" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("11_ktlp2")

[node name="AudioClick" type="AudioStreamPlayer" parent="."]
stream = ExtResource("1_gl3tg")
bus = &"SFX"

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]
script = ExtResource("2_ncdae")

[node name="ParallaxLayer" type="ParallaxLayer" parent="ParallaxBackground"]
texture_filter = 1
texture_repeat = 1
motion_scale = Vector2(0.2, 0.2)
motion_mirroring = Vector2(80, 80)

[node name="1" type="TextureRect" parent="ParallaxBackground/ParallaxLayer"]
texture_filter = 1
offset_left = -708.0
offset_top = -274.0
offset_right = -532.0
offset_bottom = -182.0
scale = Vector2(49.7875, 10.5398)
texture = ExtResource("3_tgcv5")
expand_mode = 2
stretch_mode = 1
metadata/_edit_lock_ = true

[node name="CloudsLayout" type="ParallaxLayer" parent="ParallaxBackground"]
texture_filter = 1
texture_repeat = 1
motion_scale = Vector2(0.2, 0.2)
motion_mirroring = Vector2(80, 0)

[node name="WhiteClouds" type="TextureRect" parent="ParallaxBackground/CloudsLayout"]
texture_filter = 1
offset_left = -371.0
offset_top = 105.0
offset_right = 2838.0
offset_bottom = 281.0
texture = ExtResource("4_8qx0e")
stretch_mode = 1
metadata/_edit_lock_ = true

[node name="Clouds" type="TextureRect" parent="ParallaxBackground/CloudsLayout"]
texture_filter = 1
offset_left = -352.0
offset_top = 52.0
offset_right = 2840.0
offset_bottom = 228.0
texture = ExtResource("4_8qx0e")
stretch_mode = 1
metadata/_edit_lock_ = true

[node name="FarMountainLayout" type="ParallaxLayer" parent="ParallaxBackground"]
texture_filter = 1
texture_repeat = 1
position = Vector2(0, -2)
motion_scale = Vector2(0.4, 0.4)
motion_mirroring = Vector2(80, 0)

[node name="MountainFar2" type="TextureRect" parent="ParallaxBackground/FarMountainLayout"]
texture_filter = 1
offset_left = -360.0
offset_top = 144.0
offset_right = 2871.0
offset_bottom = 320.0
texture = ExtResource("5_haok8")
stretch_mode = 1
metadata/_edit_lock_ = true

[node name="MountainFar" type="TextureRect" parent="ParallaxBackground/FarMountainLayout"]
texture_filter = 1
offset_left = -356.0
offset_top = 93.0
offset_right = 2955.0
offset_bottom = 269.0
texture = ExtResource("5_haok8")
stretch_mode = 1
metadata/_edit_lock_ = true

[node name="NearMountainLayout" type="ParallaxLayer" parent="ParallaxBackground"]
texture_filter = 1
texture_repeat = 1
motion_scale = Vector2(0.5, 0.5)
motion_offset = Vector2(100, 0)
motion_mirroring = Vector2(80, 0)

[node name="MountainNear" type="TextureRect" parent="ParallaxBackground/NearMountainLayout"]
texture_filter = 1
offset_left = -349.0
offset_top = 173.0
offset_right = 2707.0
offset_bottom = 349.0
texture = ExtResource("5_haok8")
stretch_mode = 1
metadata/_edit_lock_ = true

[node name="MointainMiddle" type="TextureRect" parent="ParallaxBackground/NearMountainLayout/MountainNear"]
texture_filter = 1
layout_mode = 0
offset_left = -1.0
offset_top = -38.0
offset_right = 3015.0
offset_bottom = 138.0
texture = ExtResource("5_haok8")
stretch_mode = 1
metadata/_edit_lock_ = true

[node name="GrassLayout" type="ParallaxLayer" parent="ParallaxBackground"]
texture_filter = 1
texture_repeat = 1
position = Vector2(-4, 6)
motion_scale = Vector2(0.7, 0.7)
motion_mirroring = Vector2(80, 0)

[node name="Grass" type="TextureRect" parent="ParallaxBackground/GrassLayout"]
texture_filter = 1
offset_left = -344.0
offset_top = 199.0
offset_right = 2744.0
offset_bottom = 375.0
texture = ExtResource("6_l86dr")
stretch_mode = 1
metadata/_edit_lock_ = true

[node name="Grass1" type="TextureRect" parent="ParallaxBackground/GrassLayout/Grass"]
texture_filter = 1
layout_mode = 0
offset_left = -2.0
offset_top = 35.0
offset_right = 2782.0
offset_bottom = 211.0
scale = Vector2(1.03154, 0.939624)
texture = ExtResource("6_l86dr")
stretch_mode = 1
metadata/_edit_lock_ = true

[node name="Grass2" type="TextureRect" parent="ParallaxBackground/GrassLayout/Grass/Grass1"]
texture_filter = 1
layout_mode = 0
offset_left = -1.0
offset_top = 35.0
offset_right = 3231.0
offset_bottom = 211.0
texture = ExtResource("6_l86dr")
stretch_mode = 1
metadata/_edit_lock_ = true

[node name="Grass3" type="TextureRect" parent="ParallaxBackground/GrassLayout/Grass/Grass1/Grass2"]
texture_filter = 1
layout_mode = 0
offset_left = 5.0
offset_top = 35.0
offset_right = 3401.0
offset_bottom = 211.0
texture = ExtResource("6_l86dr")
stretch_mode = 1
metadata/_edit_lock_ = true

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 10
alignment = 2

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 30
alignment = 1

[node name="TextureRect" type="TextureRect" parent="CanvasLayer/VBoxContainer/HBoxContainer"]
layout_mode = 2
texture = ExtResource("8_88eb2")
stretch_mode = 3

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/VBoxContainer/HBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 15
alignment = 1

[node name="Name" type="Label" parent="CanvasLayer/VBoxContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("9_t5gts")
theme_override_font_sizes/font_size = 32
text = "Chill Girlie"
horizontal_alignment = 1

[node name="Description" type="Label" parent="CanvasLayer/VBoxContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_constants/line_spacing = 11
theme_override_fonts/font = ExtResource("10_t58x3")
text = "A calm and clever girl. 
Quick-witted and dependable, 
she keeps a cool head 
in any situation."
horizontal_alignment = 1

[node name="Cost" type="Label" parent="CanvasLayer/VBoxContainer/HBoxContainer/VBoxContainer"]
visible = false
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("9_t5gts")
horizontal_alignment = 1

[node name="Select" type="Button" parent="CanvasLayer/VBoxContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("11_lvpoh")
text = "Select"

[node name="Menubar" type="HBoxContainer" parent="CanvasLayer/VBoxContainer"]
custom_minimum_size = Vector2(0, 60)
layout_mode = 2
theme_override_constants/separation = 70
alignment = 1

[node name="Menu_button" type="Button" parent="CanvasLayer/VBoxContainer/Menubar"]
layout_mode = 2
size_flags_vertical = 4
theme = ExtResource("11_lvpoh")
text = "Back"

[node name="Ach_button" type="Button" parent="CanvasLayer/VBoxContainer/Menubar"]
layout_mode = 2
size_flags_vertical = 4
theme = ExtResource("11_lvpoh")
text = "Achievements"

[node name="Store_button" type="Button" parent="CanvasLayer/VBoxContainer/Menubar"]
custom_minimum_size = Vector2(80, 0)
layout_mode = 2
size_flags_vertical = 4
theme = ExtResource("11_lvpoh")
theme_override_colors/font_disabled_color = Color(0, 0, 0, 1)
theme_override_styles/disabled = SubResource("StyleBoxTexture_65my8")
disabled = true
text = "Store"

[node name="Level_button" type="Button" parent="CanvasLayer/VBoxContainer/Menubar"]
unique_name_in_owner = true
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
size_flags_vertical = 4
theme = ExtResource("11_lvpoh")
text = "Levels
"

[node name="Button" type="Button" parent="CanvasLayer"]
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = 50.0
offset_top = 4.0
offset_right = -50.0
offset_bottom = 4.0
grow_horizontal = 0
grow_vertical = 2
theme_override_icons/icon = ExtResource("12_dctqq")
theme_override_styles/focus = SubResource("StyleBoxEmpty_mocl5")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_0xj7t")
theme_override_styles/hover = SubResource("StyleBoxEmpty_nn6tc")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_0gv6d")
theme_override_styles/normal = SubResource("StyleBoxEmpty_dnqww")
icon_alignment = 1

[node name="Button2" type="Button" parent="CanvasLayer"]
custom_minimum_size = Vector2(20, 20)
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 50.0
offset_top = 4.0
offset_right = 50.0
offset_bottom = 4.0
grow_vertical = 2
theme_override_icons/icon = ExtResource("13_gxk5j")
theme_override_styles/focus = SubResource("StyleBoxEmpty_l1wbm")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_pj5ck")
theme_override_styles/hover = SubResource("StyleBoxEmpty_33b7a")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_y8576")
theme_override_styles/normal = SubResource("StyleBoxEmpty_g4una")

[connection signal="pressed" from="CanvasLayer/VBoxContainer/HBoxContainer/VBoxContainer/Select" to="." method="_on_select_pressed"]
[connection signal="pressed" from="CanvasLayer/VBoxContainer/Menubar/Menu_button" to="." method="_on_menu_button_pressed"]
[connection signal="pressed" from="CanvasLayer/VBoxContainer/Menubar/Ach_button" to="." method="_on_ach_button_pressed"]
[connection signal="pressed" from="CanvasLayer/VBoxContainer/Menubar/Store_button" to="." method="_on_store_button_pressed"]
[connection signal="pressed" from="CanvasLayer/VBoxContainer/Menubar/Level_button" to="." method="_on_level_button_pressed"]
[connection signal="pressed" from="CanvasLayer/Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="CanvasLayer/Button2" to="." method="_on_button_2_pressed"]
